# LiteVec

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: bench.yml  ci.yml  release.yml
benches/datasets/: README.md
bindings/node/: Cargo.toml  index.d.ts  package.json
bindings/node/src/: lib.rs
bindings/python/: Cargo.toml  pyproject.toml  test_smoke.py
bindings/python/litevec/: __init__.py  __init__.pyi  _native.cp314-win_amd64.pyd
bindings/python/src/: lib.rs
crates/litevec/: Cargo.toml
crates/litevec-cli/: Cargo.toml
crates/litevec-cli/src/: main.rs
crates/litevec-core/: Cargo.toml
crates/litevec-core/benches/: distance_bench.rs  insert_bench.rs  search_bench.rs
crates/litevec-core/src/: collection.rs  database.rs  error.rs  lib.rs  persistence.rs  query.rs  types.rs
crates/litevec-core/src/distance/: cosine.rs  dot.rs  euclidean.rs  mod.rs  simd.rs
crates/litevec-core/src/index/: diskann.rs  flat.rs  hnsw.rs  mod.rs  pq.rs  quantize.rs
crates/litevec-core/src/metadata/: filter.rs  fulltext.rs  hybrid.rs  mod.rs  secondary.rs  store.rs
crates/litevec-core/src/storage/: file.rs  mod.rs  page.rs  wal.rs
crates/litevec-core/tests/: integration_tests.rs  property_tests.rs
crates/litevec-ffi/: Cargo.toml
crates/litevec-ffi/include/: litevec.h
crates/litevec-ffi/src/: lib.rs
crates/litevec-mcp/: Cargo.toml
crates/litevec-mcp/src/: main.rs
crates/litevec-wasm/: Cargo.toml
crates/litevec-wasm/src/: lib.rs
crates/litevec/examples/: benchmark.rs
crates/litevec/src/: lib.rs
docs/: README.md  comparison.md
docs/api/: c-ffi.md  cli.md  mcp.md  nodejs.md  python.md  rust.md  wasm.md
docs/examples/: agent-memory.md  rag.md  semantic-search.md
docs/guide/: architecture.md  getting-started.md  performance.md  persistence.md
examples/node/: quickstart.js
examples/python/: basic_usage.py  faiss_benchmark.py  langchain_integration.py  with_sentence_transformers.py
examples/python/langchain/: langchain_litevec.py
examples/python/ollama/: ollama_rag.py
examples/python/rag/: rag_pipeline.py
examples/rust/: backup_restore.rs  quickstart.rs  semantic_search.rs
