[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "litevec"
version = "0.1.0"
requires-python = ">=3.8"
description = "The embedded vector database. No server. No Docker. No config."
license = { text = "MIT" }
keywords = ["vector", "database", "embedding", "search", "ai", "rag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "litevec._native"
