[package]
name = "litevec-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for LiteVec embedded vector database"

[[bin]]
name = "litevec"
path = "src/main.rs"

[dependencies]
litevec-core = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4", features = ["derive"] }
