[package]
name = "litevec-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core engine for LiteVec embedded vector database"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
memmap2 = { workspace = true }
rand = { workspace = true }
bytemuck = { workspace = true }
tracing = { workspace = true }
ordered-float = { workspace = true }
uuid = { version = "1", features = ["v4"] }
crc32fast = "1"

[dev-dependencies]
criterion = { workspace = true }

[features]
default = ["simd"]
simd = []
nightly = []

[[bench]]
name = "distance_bench"
harness = false

[[bench]]
name = "search_bench"
harness = false
