[package]
name = "litevec-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP server for LiteVec embedded vector database"

[[bin]]
name = "litevec-mcp"
path = "src/main.rs"

[dependencies]
litevec-core = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
clap = { version = "4", features = ["derive"] }
tracing = { workspace = true }
