[package]
name = "litevec-wasm"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "WebAssembly bindings for LiteVec embedded vector database"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
litevec-core = { path = "../litevec-core" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"
